fixes some styling to add contrast and center the full size image in the modal

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: white;
+  background-color: beige;
   box-shadow: 0 0 0 50vmax rgba(0,0,0,.5);
   position: absolute;
   top: 40%;
@@ -15,7 +15,7 @@
 }
 
 .photo-details-modal--close-button {
-  background-color: white;
+  background-color: beige;
   border: none;
   color: black;
   text-align: center;
@@ -23,8 +23,7 @@
   display: inline-block;
   font-size: 16px;
   cursor: pointer;
-  margin-left: 16px;
-  margin-top: 16px;
+  margin: 10px;
 }
 
 .photo-details-modal--images {
@@ -35,6 +34,7 @@
 .photo-details-modal--image {
   max-width: 95%;
   border-radius: 8px;
+  align-self: center;
 }
 
 .photo-details-modal--top-bar {
