--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -5,6 +5,7 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: beige;
 }
 
 .photo-list:after {
